src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AmountTest__c</fullName>
        <label>通貨桁テスト</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BCNFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <label>BCNフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CyubuCheck2__c</fullName>
        <label>中部自動車確認用２</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CyubuCheck__c</fullName>
        <label>中部自動車確認用</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DatetimeTest__c</fullName>
        <label>日時テスト</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>トリガ更新項目２</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>入力規則停止フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>日程変更理由</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field13__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>理由A</fullName>
                </value>
                <value>
                    <fullName>理由B</fullName>
                </value>
                <value>
                    <fullName>理由C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keika__c</fullName>
        <formula>(targetDate__c -  DATE(YEAR(targetDate__c),1,1))+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>今年経過日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QR__c</fullName>
        <formula>IMAGE(&apos;http://chart.apis.google.com/chart?chs=150x150&amp;cht=qr&amp;chl=http://allabout.co.jp/&apos;, &apos;test&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QRコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>seigyoBase__c</fullName>
        <label>制御下</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>seigyosaki__c</fullName>
        <label>制御先</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>seigyoBase__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>１</fullName>
                </value>
                <value>
                    <fullName>２</fullName>
                </value>
                <value>
                    <fullName>３</fullName>
                </value>
                <value>
                    <fullName>４</fullName>
                </value>
                <value>
                    <fullName>５</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>targetDate__c</fullName>
        <label>指定締め</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべての取引先</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <listViews>
        <fullName>V01_ConsigneeList</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべての取引先</label>
    </listViews>
    <recordTypes>
        <fullName>TestRT</fullName>
        <active>true</active>
        <label>TestRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>TestRT2</fullName>
        <active>true</active>
        <label>TestRT2</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AccountErrMsg</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Field6__c = &quot;あいうえお&quot;, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>１２３４５６７８９０</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FobbidenCheck</fullName>
        <active>true</active>
        <description>REGEX(  Name  , &quot;^[&quot;+$Label.MOJITEST+&quot;]*$&quot;)</description>
        <errorConditionFormula>REGEX(  Name  , &quot;.*[&quot; + $Label.MOJITEST + &quot;].*&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>使用できない文字が含まれています</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RegistErr</fullName>
        <active>false</active>
        <errorConditionFormula>TRUE</errorConditionFormula>
        <errorMessage>返却キット送付依頼が行われておりません。
「処理依頼内容」へ返却キット送付依頼項目を選択して下さい。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>test</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( Field6__c  , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorMessage>ダブルクオーテーションはダメ</errorMessage>
    </validationRules>
</CustomObject>